--- a/19 de junio/ejercicio.html
+++ b/19 de junio/ejercicio.html
@@ -22,6 +22,8 @@
 <div id="contenedor">
     <img id="miImagen" src="/Web/fondo.jpg" alt="Imagen inicial">
     <p id="hora"></p>
+    <span id="fecha-hora"></span>
+
 </div>
 
     <script src="/19 de junio/ejercicio.js"></script>
