--- a/VERIFICAR EN LISTA/verificarenlist.html
+++ b/VERIFICAR EN LISTA/verificarenlist.html
@@ -19,17 +19,17 @@
     <div id="resultado"></div>
 
     <script>
-        // Lista de empleados en minúsculas para comparaciones insensibles a mayúsculas
+
         let empleados = ['juan', 'maría', 'carlos', 'ana', 'luis', 'sofía'];
 
         function buscarEmpleado(event) {
-            event.preventDefault(); // Evitar que el formulario recargue la página
-
-            let nombreEmpleado = document.getElementById('nombre').value.toLowerCase(); // Convertir a minúsculas
+            event.preventDefault(); 
+            
+            let nombreEmpleado = document.getElementById('nombre').value.toLowerCase(); 
 
             let encontrado = false;
 
-            // Eliminamos el uso de trim() para cumplir con la solicitud
+            
             for (let i = 0; i < empleados.length; i++) {
                 if (empleados[i] === nombreEmpleado) {
                     encontrado = true;
@@ -43,6 +43,9 @@
                 document.getElementById('resultado').textContent = `El empleado ${nombreEmpleado} no está en la lista.`;
             }
         }
+
+document.getElementById('btn').addEventListener('click', buscarEmpleado)
     </script>
 </body>
 </html>
+
